@startuml
class Room {
    - String room_name_
    - enum room_status_
    - enum room_size_
    - int estimated_time_
    + set_status(enum): void
    + set_time_to_clean(int): void 
    + get_time_to_clean(): int
    + get_id(): string
    + get_status(): enum
}

enum Status {
    Dirty
    In-progress
    Clean
}

enum Size {
    Small
    Medium
    Large
}

interface CommandLine {}

Management "1" o--> "0...n" Room
Management "1" o--> "0...n" Robot
Room "1" *--> "1" Status
Room "1" *--> "1" Size
Robot "1" *--> "1" Size
Management ..|> CommandLine
@enduml
